--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,2 +1,29 @@
-- name: Deploy to Neocities
-  uses: bcomnes/deploy-to-neocities@v3.0.4
+name: Deploy to neocities
+
+# only run on changes to main. Use main or master depending on whatever your default branch is called.
+on:
+  push:
+    branches:
+      - main
+
+concurrency: # prevent concurrent deploys doing strange things
+  group: deploy-to-neocities
+  cancel-in-progress: true
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+    # The checkout step copies your repo into the action runner. Important!
+    - uses: actions/checkout@v4
+    # Set up any tools and build steps here
+    # Here we deploy the folder named `public`
+    - name: Deploy to neocities
+      uses: bcomnes/deploy-to-neocities@v3
+      with:
+        api_key: ${{ Neocities.NEOCITIES_API_TOKEN }}
+        cleanup: false
+        neocities_supporter: true # set this to true if you have a supporter account and want to bypass unsuported files filter.
+        preview_before_deploy: true # print a deployment plan prior to waiting for files to upload.
+        dist_dir: public
