--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,15 @@ jobs:
     # The checkout step copies your repo into the action runner. Important!
     - uses: actions/checkout@v4
     # Set up any tools and build steps here
+    - name: Use Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: lts/*
+    # If you have a different build process, replace this with your own build steps
+    - name: Install deps and build
+      run: |
+        npx @11ty/eleventy 
+
     # Here we deploy the folder named `public`
     - name: Deploy to neocities
       uses: bcomnes/deploy-to-neocities@v3
