--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,16 +22,17 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: lts/*
+    
     # If you have a different build process, replace this with your own build steps
     - name: Install deps and build
       run: |
-        npx @11ty/eleventy 
-
+        npx @11ty/eleventy
+        
     # Here we deploy the folder named `public`
     - name: Deploy to neocities
       uses: bcomnes/deploy-to-neocities@v3
       with:
-        api_key: $NEOCITIES_API_TOKEN
+        api_key: ${{ Neocities.NEOCITIES_API_TOKEN }}
         cleanup: true
         neocities_supporter: true # set this to true if you have a supporter account and want to bypass unsuported files filter.
         preview_before_deploy: true # print a deployment plan prior to waiting for files to upload.
