--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+environment: Neocities
 name: Deploy to neocities
 
 # only run on changes to main. Use main or master depending on whatever your default branch is called.
