--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "type": "module",
   "dependencies": {
     "@11ty/eleventy": "^3.1.2",
-    "luxon": "^3.7.2"
+    "@11ty/eleventy-fetch": "^5.1.0",
+    "luxon": "^3.7.2",
+    "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "wrangler": "^4.45.0"
